2006-01-24  Gary Benson  <gbenson@redhat.com>

	* java/net/SocketPermission.java: Implemented serialization.

2006-01-24  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/StringContent.java
	(remove): Modified argument check to prevent removal of last character,
	(getChars): Removed null argument check to allow NullPointerException,
	added API docs,
	(checkLocation): Added API docs and white space.

2006-01-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(insertUpdate): Should only call createFracture with 
	StartTagType. Added check.
	(insertContentTag): Should use the tags length for splitting.
	Also, added a check to determine if current's start and end offset are
	equal to the offset and endOffset. If so, only one leaf element
	should be added. 
	(createFracture): Removed FIXME. This function is complete.
	(split): Added calls to replace. Changed so the child is 
	added immediately to the paragraph. Prevents NPEs.

2006-01-23  Mark Wielaard  <mark@klomp.org>

	* examples/Makefile.am (EXAMPLE_ZIP): Group cd and commands.

2006-01-23  Tom Tromey  <tromey@redhat.com>

	* gnu/java/security/x509/X509Certificate.java (parse):
	Unconditionally read value; for version==1 case when reading
	algorithm ID.

2006-01-23  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/synth/ColorType.java,
	* javax/swing/plaf/synth/Region.java,
	* javax/swing/plaf/synth/SynthConstants.java,
	* javax/swing/plaf/synth/SynthContext.java
	* javax/swing/plaf/synth/SynthGraphicsUtils.java,
	* javax/swing/plaf/synth/SynthLookAndFeel.java,
	* javax/swing/plaf/synth/SynthPainter.java,
	* javax/swing/plaf/synth/SynthStyle.java,
	* javax/swing/plaf/synth/SynthStyleFactory.java,
	* javax/swing/plaf/synth/package.html:
	New files. Added the public API and framework classes for the
	Synth look and feel.

2006-01-23  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/Segment.java: API docs all over.
